assets/stylesheets/modules/story_summary.css.sass
.story
  +border-radius(4px)
  +box-shadow(0 10px 15px rgba(0,0,0,.2))
  .inner
    padding: 15px
  .switchable-block
    .switched-state
      display: none
    &.adding, &.deleting, &.editing
      .switched-state
        display: block
      .initial-state
        display: none
  .delete-link
    float: right
  .delete-confirmation
    background: #cc3300
    color: #fff
    padding: 10px 15px
  ul
    list-style: none
  .story-description
  .story-summary
    .item
      +clearfix
      line-height: 18px
      margin-bottom: 8px
    .story-link
      display: block
      float: left
      width: 20px
      height: 18px
      margin-right: 5px
      background: url('/public/images/icons/link_icon.png')
    .story-id
      float: left
      height: 18px
    .story-type, .story-points, .story-state
      float: right
      text-transform: capitalize
  .story-form
    margin-bottom: 30px
  .story-tasks
    margin-bottom: 30px
    .task-block
      position: relative
      padding: 5px
      +border-radius(5px)
      $shadow: 0 0 2px rgba(0,0,0,.2)
      +box-shadow($shadow)
  .story-comments
    margin-bottom: 30px
    .comment-block
      word-wrap: break-word
      position: relative
      background: #faf6f2
      padding: 10px 20px 10px 10px
      +border-radius(5px)
      +box-shadow(1px 2px 2px rgba(0,0,0,.2))
  .story-attachments
    margin-bottom: 20px
    .attachment-block
      height: 32px
      background: url('/public/images/icons/attachment.png') no-repeat left
      padding-left: 30px
  .story-deleting    
    margin-bottom: 20px
.close-link
  position: absolute
  width: 9px
  height: 9px
  top: 5px 
  right: 8px
  background: url('/public/images/icons/close-icon.png')
      
      

